tests/compile-fail/attr_on_unit_struct.rs

extern crate auto_impl;
use auto_impl::auto_impl;


#[auto_impl(&, &mut)]
struct Foo(usize, String);
